# erc20_registry

./: .gitattributes  1  Cargo.toml  README.md
data/: pools.toml  tokens.toml
src/: interfaces.rs  lib.rs  main.rs  pools.rs  prices.rs  tokens.rs
