[package]
name = "block_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
alloy = { version = "0.9.2", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
csv = "1.3.1"
indicatif = "0.17.9"
futures = "0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
dotenv = "0.15.0"
parquet = "54.0.0"
arrow = "54.0.0"

[lib]
name = "block_extractor_rs"
path = "src/lib.rs"
